checkbox alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,10 @@ h2.head-line{
 .checkbox label {
     font-size: 12px;
     letter-spacing: 1.2px;
-    padding-left: 6px;
+    padding-left: 0px;
+}
+input[type="radio"], input[type="checkbox"] {
+    margin: 0;
 }
 .subscribe-btn{
     background: #8ab339;
